Now HelpCommandTest works and added new CommandLoaderTest class