@@ -1,121 +1,88 @@
 package ch.supsi.fscli.backend.business.command;
 
-
-import ch.supsi.fscli.backend.business.command.business.CommandDetails;
-import ch.supsi.fscli.backend.business.command.business.CommandHelpContainer;
-import ch.supsi.fscli.backend.business.command.commands.AbstractValidatedCommand;
-import ch.supsi.fscli.backend.business.command.commands.CommandContext;
-import ch.supsi.fscli.backend.business.command.commands.CommandResult;
-import ch.supsi.fscli.backend.business.command.commands.HelpCommand;
-import ch.supsi.fscli.backend.business.command.commands.validators.AbstractValidator;
-import ch.supsi.fscli.backend.business.filesystem.FileSystem;
-import ch.supsi.fscli.backend.business.service.FileSystemService;
+import ch.supsi.fscli.backend.business.command.commands.*;
+import ch.supsi.fscli.backend.business.command.commands.validators.CommandValidator;
 import ch.supsi.fscli.backend.business.service.IFileSystemService;
-import ch.supsi.fscli.backend.util.BackendTranslator;
-import org.junit.jupiter.api.BeforeAll;
+import ch.supsi.fscli.backend.util.BackendTranslator; // Import necessario
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Mock;
+import org.mockito.Mockito;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.anyString;
 
-public class HelpCommandTest {
-    private static FileSystem fileSystem;
-    private static IFileSystemService fileSystemService;
-    private static CommandHelpContainer mockContainer;
-    private static HelpCommand helpCommand;
+@ExtendWith(MockitoExtension.class)
+class HelpCommandTest {
 
-    @BeforeAll
-    public static void setUp() {
-        fileSystem = FileSystem.getInstance();
-        fileSystemService = FileSystemService.getInstance(fileSystem);
-        mockContainer = mock(CommandHelpContainer.class);
+    @Mock
+    IFileSystemService fsServiceMock;
 
-        helpCommand = new HelpCommand(
-                fileSystemService,
-                "help",
-                "help",
-                "Display available commands"
-        );
-        AbstractValidatedCommand.setTranslator(BackendTranslator.getInstance());
-        AbstractValidator.setTranslator(BackendTranslator.getInstance());
+    @Mock
+    BackendTranslator translatorMock;
+
+    @Mock
+    ICommand commandMock1;
+
+    @Mock
+    ICommand commandMock2;
+
+    HelpCommand helpCommand;
+
+    @BeforeEach
+    void setUp() {
+        // Configuriamo il comportamento base del traduttore
+        // Quando gli chiediamo una stringa, ci ridà la chiave stessa (es. "title" -> "title")
+        // Usiamo 'lenient()' perché Mockito potrebbe lamentarsi se non usiamo il mock in tutti i test
+        Mockito.lenient().when(translatorMock.getString(anyString())).thenAnswer(invocation -> invocation.getArgument(0));
+
+        // Iniettiamo il mock nel campo statico della classe astratta
+        AbstractValidatedCommand.setTranslator(translatorMock);
+
+        // Istanziamo la classe da testare
+        helpCommand = new HelpCommand(fsServiceMock, "help", "synopsis", "desc");
     }
 
     @Test
-    public void testExecute_WithNoArgumentsAndNoOptions_ShouldSucceed() {
-        Map<String, CommandDetails> commands = new HashMap<>();
-        commands.put("cd", new CommandDetails("cd [DIR]", "Change directory"));
-        commands.put("ls", new CommandDetails("ls [OPTIONS]", "List files"));
+    void testExecuteCommand_Success() {
+        // Stubbing dei comandi
+        Mockito.when(commandMock1.getSynopsis()).thenReturn("cmd1");
+        Mockito.when(commandMock1.getDescription()).thenReturn("desc1");
 
-        // FIXME
-        when(mockContainer.getCommandDetailsMap()).thenReturn(commands);
+        Mockito.when(commandMock2.getSynopsis()).thenReturn("cmd2");
+        Mockito.when(commandMock2.getDescription()).thenReturn("desc2");
 
-        CommandContext context = new CommandContext(
-                fileSystem.getCurrentDirectory(),
-                Collections.emptyList(),
-                Collections.emptyList()
-        );
+        // Set commands
+        helpCommand.setCommands(List.of(commandMock1, commandMock2));
+
+        // Context vuoto
+        CommandContext context = new CommandContext(null, Collections.emptyList(), Collections.emptyList());
+
+        // Execute
         CommandResult result = helpCommand.execute(context);
 
+        // Assert
         assertTrue(result.isSuccess());
-        assertTrue(result.getOutput().contains("Available Commands List:"));
-        assertTrue(result.getOutput().contains("cd : cd [DIR]"));
-        assertTrue(result.getOutput().contains("ls : ls [OPTIONS]"));
+        // Nota: ora l'output conterrà le chiavi non tradotte (es. "commandList.title") + i comandi
+        String output = result.getOutput();
+        assertTrue(output.contains("cmd1 : desc1"));
+        assertTrue(output.contains("cmd2 : desc2"));
     }
 
     @Test
-    public void testExecute_WithArguments_ShouldReturnError() {
-        CommandContext context = new CommandContext(
-                fileSystem.getCurrentDirectory(),
-                List.of("somearg"),
-                Collections.emptyList()
-        );
+    void testExecuteCommand_WithNullList_ReturnsError() {
+        helpCommand.setCommands(null);
+
+        CommandContext context = new CommandContext(null, Collections.emptyList(), Collections.emptyList());
+
         CommandResult result = helpCommand.execute(context);
 
-        assertFalse(result.isSuccess());
-    }
-
-    @Test
-    public void testExecute_WithOptions_ShouldReturnError() {
-        CommandContext context = new CommandContext(
-                fileSystem.getCurrentDirectory(),
-                Collections.emptyList(),
-                List.of("-a")
-        );
-        CommandResult result = helpCommand.execute(context);
-
-        assertFalse(result.isSuccess());
-    }
-
-    @Test
-    public void testExecute_WithEmptyCommandMap_ShouldReturnError() {
-        when(mockContainer.getCommandDetailsMap()).thenReturn(Collections.emptyMap());
-
-        CommandContext context = new CommandContext(
-                fileSystem.getCurrentDirectory(),
-                Collections.emptyList(),
-                Collections.emptyList()
-        );
-        CommandResult result = helpCommand.execute(context);
-
-        assertFalse(result.isSuccess());
-    }
-
-    @Test
-    public void testExecute_WithNullCommandMap_ShouldReturnError() {
-        when(mockContainer.getCommandDetailsMap()).thenReturn(null);
-
-        CommandContext context = new CommandContext(
-                fileSystem.getCurrentDirectory(),
-                Collections.emptyList(),
-                Collections.emptyList()
-        );
-        CommandResult result = helpCommand.execute(context);
-
-        assertFalse(result.isSuccess());
+        // Deve fallire
+        assertTrue(!result.isSuccess());
     }
 }
